--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,2 +1,6 @@
-spring.datasource.url=${DATABASE_URL}
-spring.jpa.hibernate.ddl-auto=update
+jdbc.driverClassName=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/dbadotapet
+spring.datasource.username=postgres
+spring.datasource.password=tango1010
