--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -5,8 +5,8 @@ spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-server.port=8081
-spring.rabbitmq.host = 127.0.0.1
+server.port=8080
+spring.rabbitmq.host = rabbitmq
 spring.rabbitmq.port = 5672
 spring.rabbitmq.username = guest
 spring.rabbitmq.password = guest
